mdapi_output_dir/objects/Property__c.object
<CustomObject>
    <label>Property</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Uid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Announce__c</fullName>
        <label>Announce</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipName>properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surface__c</fullName>
        <label>Surface</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                    <default>true</default>
                    <label>Flat</label>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Loft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>